Co-authored-by: ccolcleasure-eb <ccolcleasure-eb@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-scrollable="true">
 
 <head>
   <meta charset="UTF-8" />
@@ -53,6 +53,10 @@
       </div>
     </div>
   </header>
+  
+  <div class="boxed">
+    "The road to success is always under construction." - Lily Tomlin
+  </div>
 
   <section id="services" class="sectionContainer">
     <div class="innerSectionContainer">
@@ -67,39 +71,89 @@
 
       <div id="serviceBlocksContainer">
         <div class="serviceBlock">
-          <img src="/assets/texas.png" alt="mary jane" />
-          <div class="overlay">
-            <p class="serviceName">Tree Trimming</p>
+          <img src="/assets/drivewaysAndRoads.jpg"/>
+          <div class="innerBlock">
+            <p class="serviceName">Driveways and Roads</p>
+          </div>
+          <div class="popup">
+            <h3>Driveways and Roads</h3>
+            <p>We construct professional driveways , parking lots, and roads for Comanche and
+              surrounding counties. We can provide you with the planning, material hauling, and installation to
+              make sure it's done right the first time.
+              If your old road has seen better days, or perhaps you want to keep your new road in
+              pristine condition, be sure to ask about our yearly road maintenance subscription.
+              </p>
           </div>
         </div>
         <div class="serviceBlock">
-          <img src="/assets/texas.png" alt="mary jane" />
-          <div class="overlay">
-            <p class="serviceName">Tree Trimming</p>
+          <img src="/assets/haulinStuff.jpg"/>
+          <div class="innerBlock">
+            <p class="serviceName">Dirt, Rock, and Sand Hauling</p>
+          </div>
+          <div class="popup">
+            <h3>Dirt, Rock, and Sand Hauling</h3>
+            <p>We provide residential and commercial dirt, rock, sand, and
+              topsoil hauling services at very competitive prices. We also offer waste material haul off. Our
+              most commonly hauled resources are:
+              Road Base
+              Topsoil
+              Crushed Caliche
+              Cushion Sand
+              Limestone
+              Gravel
+              Fill Dirt
+              Oversized Rock
+              </p>
           </div>
         </div>
         <div class="serviceBlock">
-          <img src="/assets/texas.png" alt="mary jane" />
-          <div class="overlay">
-            <p class="serviceName">Tree Trimming</p>
+          <img src="/assets/parkingLot.jpg"/>
+          <div class="innerBlock">
+            <p class="serviceName">Commercial and Residential Building Pads</p>
+          </div>
+          <div class="popup">
+            <h3>Commercial and Residential Building Pads</h3>
+            <p>We provide pad site and parking lot construction services using the best equipment and
+              materials possible. Choose us to provide a reliable and high-end pad or parking lot for your new
+              home or building. No matter the size, we can help you.
+              </p>
           </div>
         </div>
         <div class="serviceBlock">
-          <img src="/assets/texas.png" alt="mary jane" />
-          <div class="overlay">
-            <p class="serviceName">Tree Trimming</p>
+          <img src="/assets/landBrushClearing.jpg"/>
+          <div class="innerBlock">
+            <p class="serviceName">Land/Brush Clearing</p>
+          </div>
+          <div class="popup">
+            <h3>Land/Brush Clearing</h3>
+            <p>Whether it's your home, farm, or recreation area, we will clear brush and trees while working to
+              protect the value of your land and maintain its resources.
+              </p>
           </div>
         </div>
         <div class="serviceBlock">
-          <img src="/assets/texas.png" alt="mary jane" />
-          <div class="overlay">
-            <p class="serviceName">Tree Trimming</p>
+          <img src="/assets/stockTanks.jpg"/>
+          <div class="innerBlock">
+            <p class="serviceName">Stock Tanks</p>
+          </div>
+          <div class="popup">
+            <h3>Stock Tanks</h3>
+            <p>Not sure where to put your new stock tank? Holland Construction Inc can help you come up with
+              a plan to fit your needs. Whether you are needing a pond for irrigation, livestock , or wildlife use,
+              we will dig test holes and shoot grades to collect the data and develop the best plan to fit your
+              needs.</p>
           </div>
         </div>
         <div class="serviceBlock">
-          <img src="/assets/texas.png" alt="mary jane" />
-          <div class="overlay">
-            <p class="serviceName">Tree Trimming</p>
+          <img src="/assets/demolition.jpg"/>
+          <div class="innerBlock">
+            <p class="serviceName">Demolition Services</p>
+          </div>
+          <div class="popup">
+            <h3>Demolition Services</h3>
+            <p>We are ready to help you with your next demolition project. Our experienced
+              team and high powered equipment will ensure the job is done correctly and safe.
+            </p>
           </div>
         </div>
       </div>
@@ -113,7 +167,7 @@
           <h3>About</h3>
         </div>
         <div class="title">
-          <h1>Family owned and operated since 1921.</h1>
+          <h1>Holland Construction Inc is a family owned and operated company.</h1>
         </div>
       </div>
 
@@ -134,18 +188,23 @@
       </div>
 
       <div id="aboutContent">
-        <h4>That's like 100 years!</h4>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Pellentesque volutpat risus felis, eget aliquet augue euismod vitae.
-          Vestibulum ut eleifend eros. Vivamus eu facilisis odio. Fusce
-          gravida et nisi non aliquet.
+          The company was founded
+in 2016 by Dean and Christy Holland. It started as a small remodeling business. Dean was
+known for his quality work, perfectionism, and critical thinking. He quickly built a loyal clientele
+base, but in late 2018 Dean was diagnosed with a rare form of brain cancer. We honor his
+memory by striving to provide top-notch quality work for our customers and give them the best
+experience possible. Dean's daughter and son in law, Marsha and Sheldon Scott, look over the
+company in 2020. Sheldon has a lifetime of experience in earth work, running heavy equipment,
+and farming.
         </p>
         <br />
         <p>
-          Pellentesque ut imperdiet quam. Lorem ipsum dolor sit amet,
-          consectetur adipiscing elit. Donec euismod velit vitae dolor luctus
-          scelerisque. Donec a augue eu justo dapibus aliquet in id eros.
+          Our main focus is dirt work and hauling for comanche and surrounding counties. We also
+offer a variety of other services such as land/brush clearing, stock tank construction, and
+residential/commercial building pads. With our experienced and professional team, we are
+ready to help you with your next project!
+
         </p>
       </div>
     </div>
@@ -179,19 +238,19 @@
 
         <span class="spacer24"></span>
         <div class="inputGrid">
-        <div class="labelAndInput">
-          <label for="contactEmailAddressInput">Email Address</label>
-          <input id="contactEmailAddressInput" type="text" placeholder="tom.collins@gmail.com" />
+          <div class="labelAndInput">
+            <label for="contactEmailAddressInput">Email Address</label>
+            <input id="contactEmailAddressInput" type="text" placeholder="tom.collins@gmail.com" />
+          </div>
         </div>
-      </div>
         <span class="spacer24"></span>
 
         <div class="inputGrid">
-        <div class="labelAndInput">
-          <label for="textareaInput">Message</label>
-          <textarea id="textareaInput" cols="10" rows="5"></textarea>
+          <div class="labelAndInput">
+            <label for="textareaInput">Message</label>
+            <textarea id="textareaInput" cols="10" rows="5"></textarea>
+          </div>
         </div>
-      </div>
 
         <span class="spacer24"></span>
 
@@ -218,12 +277,14 @@
           <summary>How far do you haul and conduct business?</summary>
           We will haul as far as needed. The price up to 50 miles is calculated by the loaded mile.
           Mileage exceeding 50 loaded miles is subject to a return-home fee. We do try to use the
-          closest supplier near you to ensure the best price possible.        </details>
+          closest supplier near you to ensure the best price possible.
+        </details>
         <details>
           <summary>What if any accidents occur during a job?</summary>
           Holland Construction Inc is properly insured to handle all emergencies and/or accidents
           that may occur. We take pride in practicing appropriate safety precautions to prevent
-          any accidents from happening.        </details>
+          any accidents from happening.
+        </details>
         <details>
           <summary>Do I need a permit to do my dirt wark?</summary>
           If you are inside city limits you may need to check your city's regulations. If you need
