Co-authored-by: ccolcleasure-eb <ccolcleasure-eb@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" data-scrollable="true">
-<!-- share terminal? -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -47,11 +46,19 @@
   <header id="home" class="sectionContainer darkTheme">
     <div class="innerSectionContainer">
       <div id="headerContent">
-        <h1>Lorem ipsum dolor sit amet, consectetur adipiscing.</h1>
+        <h1>Holland Construction</h1>
         <p id="introText">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Pellentesque volutpat risus felis, eget aliquet augue euismod vitae.
-          Vestibulum ut eleifend eros.
+          is an agricultural, residential, and commercial
+          construction company that specializes in dirt work and hauling. 
+          Our dirt work expertise covers driveways and parking areas, stock tank 
+          builds and reconstructions, demolition, residential and commercial pad
+          building, and agricultural, commercial, or residential land clearing.
+          We offer many different hauling options as well. We have a flat bed
+          trailer with the ability to haul heavy equipment. We also have an end
+          dump and a belly dump with the capabilities of hauling demo trash, rock,
+          sand, gravel, and limestone. We strive to provide the best possible
+          experience. We pride ourselves on our work ethic, quality of work, and
+          good ol’ fashioned integrity.
         </p>
       </div>
     </div>
@@ -73,90 +80,100 @@
       </div>
 
       <div id="serviceBlocksContainer">
-        <div class="serviceBlock">
-          <img src="/assets/drivewaysAndRoads.jpg"/>
-          <div class="innerBlock">
-            <p class="serviceName">Driveways and Roads</p>
-          </div>
-          <div class="popup">
-            <h3>Driveways and Roads</h3>
-            <p>We construct professional driveways , parking lots, and roads for Comanche and
-              surrounding counties. We can provide you with the planning, material hauling, and installation to
-              make sure it's done right the first time.
-              If your old road has seen better days, or perhaps you want to keep your new road in
-              pristine condition, be sure to ask about our yearly road maintenance subscription.
+        <div class="inner">
+          <div class="serviceBlock">
+            <img src="/assets/drivewaysAndRoads.jpg"/>
+            <div class="innerBlock">
+              <p class="serviceName">Driveways and Roads</p>
+            </div>
+            <div class="popup">
+              <h3>Driveways and Roads</h3>
+              <p>We construct professional driveways , parking lots, and roads for Comanche and
+                surrounding counties. We can provide you with the planning, material hauling, and installation to
+                make sure it's done right the first time.
+                If your old road has seen better days, or perhaps you want to keep your new road in
+                pristine condition, be sure to ask about our yearly road maintenance subscription.
               </p>
+              <button class="primary viewAllServicesButton">View All Services</button>
+            </div>
           </div>
-        </div>
-        <div class="serviceBlock">
-          <img src="/assets/haulinStuff.jpg"/>
-          <div class="innerBlock">
-            <p class="serviceName">Dirt, Rock, and Sand Hauling</p>
-          </div>
-          <div class="popup">
-            <h3>Dirt, Rock, and Sand Hauling</h3>
-            <p>We provide residential and commercial dirt, rock, sand, and
-              topsoil hauling services at very competitive prices. We also offer waste material haul off. Our
-              most commonly hauled resources are:
-              Road Base
-              Topsoil
-              Crushed Caliche
-              Cushion Sand
-              Limestone
-              Gravel
-              Fill Dirt
-              Oversized Rock
+          <div class="serviceBlock">
+            <img src="/assets/haulinStuff.jpg"/>
+            <div class="innerBlock">
+              <p class="serviceName">Dirt, Rock, and Sand Hauling</p>
+            </div>
+            <div class="popup">
+              <h3>Dirt, Rock, and Sand Hauling</h3>
+              <p>We provide residential and commercial dirt, rock, sand, and
+                topsoil hauling services at very competitive prices. We also offer waste material haul off. Our
+                most commonly hauled resources are:
+                Road Base
+                Topsoil
+                Crushed Caliche
+                Cushion Sand
+                Limestone
+                Gravel
+                Fill Dirt
+                Oversized Rock
               </p>
+              <button class="primary viewAllServicesButton">View All Services</button>
+            </div>
           </div>
-        </div>
-        <div class="serviceBlock">
-          <img src="/assets/parkingLot.jpg"/>
-          <div class="innerBlock">
-            <p class="serviceName">Commercial and Residential Building Pads</p>
-          </div>
-          <div class="popup">
-            <h3>Commercial and Residential Building Pads</h3>
-            <p>We provide pad site and parking lot construction services using the best equipment and
-              materials possible. Choose us to provide a reliable and high-end pad or parking lot for your new
-              home or building. No matter the size, we can help you.
+          <div class="serviceBlock">
+            <img src="/assets/parkingLot.jpg"/>
+            <div class="innerBlock">
+              <p class="serviceName">Commercial and Residential Building Pads</p>
+            </div>
+            <div class="popup">
+              <h3>Commercial and Residential Building Pads</h3>
+              <p>We provide pad site and parking lot construction services using the best equipment and
+                materials possible. Choose us to provide a reliable and high-end pad or parking lot for your new
+                home or building. No matter the size, we can help you.
               </p>
+              <button class="primary viewAllServicesButton">View All Services</button>
+            </div>
           </div>
-        </div>
-        <div class="serviceBlock">
-          <img src="/assets/landBrushClearing.jpg"/>
-          <div class="innerBlock">
-            <p class="serviceName">Land/Brush Clearing</p>
+          <div class="serviceBlock">
+            <img src="/assets/landBrushClearing.jpg"/>
+            <div class="innerBlock">
+              <p class="serviceName">Land/Brush Clearing</p>
+            </div>
+            <div class="popup">
+              <h3>Land/Brush Clearing</h3>
+              <p>Whether it's your home, farm, or recreation area, we will clear brush and trees while working to
+                protect the value of your land and maintain its resources.
+                </p>
+              <button class="primary viewAllServicesButton">View All Services</button>
+            </div>
           </div>
-          <div class="popup">
-            <h3>Land/Brush Clearing</h3>
-            <p>Whether it's your home, farm, or recreation area, we will clear brush and trees while working to
-              protect the value of your land and maintain its resources.
+          <div class="serviceBlock">
+            <img src="/assets/stockTanks.jpg"/>
+            <div class="innerBlock">
+              <p class="serviceName">Stock Tanks</p>
+            </div>
+            <div class="popup">
+              <h3>Stock Tanks</h3>
+              <p>Not sure where to put your new stock tank? Holland Construction Inc can help you come up with
+                a plan to fit your needs. Whether you are needing a pond for irrigation, livestock , or wildlife use,
+                we will dig test holes and shoot grades to collect the data and develop the best plan to fit your
+                needs.</p>
+                <button class="primary viewAllServicesButton">View All Services</button>
+              
+            </div>
+          </div>
+          <div class="serviceBlock">
+            <img src="/assets/demolition.jpg"/>
+            <div class="innerBlock">
+              <p class="serviceName">Demolition Services</p>
+            </div>
+            <div class="popup">
+              <h3>Demolition Services</h3>
+              <p>We are ready to help you with your next demolition project. Our experienced
+                team and high powered equipment will ensure the job is done correctly and safe.
               </p>
-          </div>
-        </div>
-        <div class="serviceBlock">
-          <img src="/assets/stockTanks.jpg"/>
-          <div class="innerBlock">
-            <p class="serviceName">Stock Tanks</p>
-          </div>
-          <div class="popup">
-            <h3>Stock Tanks</h3>
-            <p>Not sure where to put your new stock tank? Holland Construction Inc can help you come up with
-              a plan to fit your needs. Whether you are needing a pond for irrigation, livestock , or wildlife use,
-              we will dig test holes and shoot grades to collect the data and develop the best plan to fit your
-              needs.</p>
-          </div>
-        </div>
-        <div class="serviceBlock">
-          <img src="/assets/demolition.jpg"/>
-          <div class="innerBlock">
-            <p class="serviceName">Demolition Services</p>
-          </div>
-          <div class="popup">
-            <h3>Demolition Services</h3>
-            <p>We are ready to help you with your next demolition project. Our experienced
-              team and high powered equipment will ensure the job is done correctly and safe.
-            </p>
+              <button class="primary viewAllServicesButton">View All Services</button>
+
+            </div>
           </div>
         </div>
       </div>
@@ -192,21 +209,24 @@
 
       <div id="aboutContent">
         <p>
-          The company was founded
-in 2016 by Dean and Christy Holland. It started as a small remodeling business. Dean was
-known for his quality work, perfectionism, and critical thinking. He quickly built a loyal clientele
-base, but in late 2018 Dean was diagnosed with a rare form of brain cancer. We honor his
-memory by striving to provide top-notch quality work for our customers and give them the best
-experience possible. Dean's daughter and son in law, Marsha and Sheldon Scott, look over the
-company in 2020. Sheldon has a lifetime of experience in earth work, running heavy equipment,
-and farming.
+          Holland Construction Inc. is owned and operated by Sheldon and Marsha
+          Scott. Sheldon grew up on a farm in central texas. He started operating
+          equipment at the age of 7 years old. At 15 he found his love of dozers
+          and dirt and started learning that to be a true steward of the land is
+          to help the land be as productive as possible while also allowing a
+          habitat for wildlife to flourish. 
         </p>
         <br />
         <p>
-          Our main focus is dirt work and hauling for comanche and surrounding counties. We also
-offer a variety of other services such as land/brush clearing, stock tank construction, and
-residential/commercial building pads. With our experienced and professional team, we are
-ready to help you with your next project!
+          At 20 years of age he was hired on
+          with an oil field and commercial dirt work contractor and soon was a
+          crew foreman learning and adopting ways to move the earth with
+          efficiency and quality in mind. At 24 he and his Father in law started
+          building a dirt work division of then ( Holland Construction and
+          Remodeling LLC) with the purchase of their first dump truck. Since, we
+          have grown our fleet and that has allowed us to offer a variety of needs
+          to our customers. Sheldon and Marsha’s main mission is to provide a great
+          product and experience for our clients.
 
         </p>
       </div>
